// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`enums.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  b = "b",
}

enum E3 {
  c1 = "c1",
  c2 = "c2",
}

enum E4 {
  d1 = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`enums.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  "b" = "b",
}

enum E3 {
  "c1" = "c1",
  "c2" = "c2",
}

enum E4 {
  "d1" = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`enums.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
enum E1 {
  a = "a"
};

enum E2 {
  'b' = "b"
};

enum E3 {
  c1 = "c1",
  'c2' = "c2"
};

enum E4 {
  d1 = "d1",
  'd-2' = "d2"
};

=====================================output=====================================
enum E1 {
  a = "a",
}

enum E2 {
  "b" = "b",
}

enum E3 {
  c1 = "c1",
  "c2" = "c2",
}

enum E4 {
  d1 = "d1",
  "d-2" = "d2",
}

================================================================================
`;

exports[`types.ts - {"quoteProps":"as-needed"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;
